--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="viewModel"
-            type="com.wolfpackdigital.baseproject.presentation.main.MainActivityViewModel" />
+            type="com.wolfpackdigital.cashli.presentation.main.MainActivityViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
