--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/splashScreenFragment"
-        android:name="com.wolfpackdigital.baseproject.presentation.main.splash.SplashScreenFragment"
+        android:name="com.wolfpackdigital.cashli.presentation.main.splash.SplashScreenFragment"
         android:label="SplashScreenFragment"
         tools:layout="@layout/fr_splash_screen" >
         <action
@@ -16,7 +16,7 @@
     </fragment>
     <fragment
         android:id="@+id/listFragment"
-        android:name="com.wolfpackdigital.baseproject.presentation.main.list.ListFragment"
+        android:name="com.wolfpackdigital.cashli.presentation.main.list.ListFragment"
         android:label="ListFragment"
         tools:layout="@layout/fr_list" />
 </navigation>
