--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -3,17 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation"
-    app:startDestination="@id/splashScreenFragment">
+    app:startDestination="@id/listFragment">
 
-    <fragment
-        android:id="@+id/splashScreenFragment"
-        android:name="com.wolfpackdigital.cashli.presentation.main.splash.SplashScreenFragment"
-        android:label="SplashScreenFragment"
-        tools:layout="@layout/fr_splash_screen" >
-        <action
-            android:id="@+id/action_splashScreenFragment_to_listFragment"
-            app:destination="@id/listFragment" />
-    </fragment>
     <fragment
         android:id="@+id/listFragment"
         android:name="com.wolfpackdigital.cashli.presentation.main.list.ListFragment"
