--- a/app/src/main/res/layout/fr_choose_language.xml
+++ b/app/src/main/res/layout/fr_choose_language.xml
@@ -9,6 +9,10 @@
             name="viewModel"
             type="com.wolfpackdigital.cashli.presentation.main.language.ChooseLanguageViewModel" />
 
+        <variable
+            name="constants"
+            type="com.wolfpackdigital.cashli.shared.Constants" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -16,23 +20,6 @@
         android:layout_height="match_parent"
         android:background="@color/colorPrimaryDark">
 
-        <!--        <ImageView-->
-        <!--            android:id="@+id/iv_logo"-->
-        <!--            android:layout_width="wrap_content"-->
-        <!--            android:layout_height="48dp"-->
-        <!--            app:layout_constraintEnd_toEndOf="parent"-->
-        <!--            app:layout_constraintStart_toStartOf="parent"-->
-        <!--            app:layout_constraintTop_toBottomOf="@id/iv_top"-->
-        <!--            android:layout_marginTop="60dp"-->
-        <!--            app:srcCompat="@drawable/ic_splash_logo"-->
-        <!--            android:contentDescription="@null" />-->
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/top_guideline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.30" />
 
         <ImageView
             android:id="@+id/iv_top"
@@ -45,54 +32,108 @@
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_choose_language_top" />
 
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/top_guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.32" />
+
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:adjustViewBounds="true"
             android:contentDescription="@null"
-            app:layout_constraintBottom_toTopOf="@id/bottom_guideline"
+            android:scaleType="fitXY"
+            app:layout_constraintBottom_toTopOf="@id/background_guideline"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/top_guideline"
-            tools:srcCompat="@drawable/ic_logo_with_dots" />
+            tools:srcCompat="@drawable/ic_background_blue_dots" />
+
+        <ImageView
+            android:id="@+id/iv_logo"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/dimen_48dp"
+            android:contentDescription="@null"
+            app:layout_constraintBottom_toTopOf="@id/btn_english"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_top"
+            app:srcCompat="@drawable/ic_splash_logo" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/bottom_guideline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.70" />
+            app:layout_constraintGuide_percent="0.68" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/background_guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.72" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_english"
-            android:layout_width="wrap_content"
+            style="@style/Widget.Cashli.Button.Radius28dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/dimen_56dp"
+            android:backgroundTint="@null"
+            android:gravity="start"
+            android:onClick="@{() -> viewModel.setLanguageAndNavigateToOnboarding(constants.ENGLISH)}"
+            android:paddingVertical="@dimen/dimen_16dp"
             android:text="@string/language_english"
+            android:textAlignment="textStart"
+            app:icon="@drawable/ic_us"
+            app:iconPadding="@dimen/dimen_12dp"
+            app:iconTint="@null"
+            app:layout_constraintBottom_toTopOf="@id/btn_spanish"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/bottom_guideline"
-            app:layout_constraintBottom_toTopOf="@id/btn_spanish" />
+            app:layout_constraintTop_toTopOf="@id/bottom_guideline" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_spanish"
-            android:layout_width="wrap_content"
+            style="@style/Widget.Cashli.Button.Radius28dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/dimen_56dp"
+            android:backgroundTint="@null"
+            android:gravity="start"
+            android:onClick="@{() -> viewModel.setLanguageAndNavigateToOnboarding(constants.SPANISH)}"
+            android:paddingVertical="@dimen/dimen_16dp"
             android:text="@string/language_spanish"
-            app:layout_constraintTop_toBottomOf="@id/btn_english"
-            app:layout_constraintStart_toStartOf="parent"
+            android:textAlignment="textStart"
+            app:icon="@drawable/ic_spanish"
+            app:iconPadding="@dimen/dimen_12dp"
+            app:iconTint="@null"
+            app:layout_constraintBottom_toTopOf="@id/btn_creole"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/btn_creole" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/btn_english" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_creole"
-            android:layout_width="wrap_content"
+            style="@style/Widget.Cashli.Button.Radius28dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/dimen_56dp"
+            android:backgroundTint="@null"
+            android:gravity="start"
+            android:onClick="@{() -> viewModel.setLanguageAndNavigateToOnboarding(constants.HAITI)}"
+            android:paddingVertical="@dimen/dimen_16dp"
             android:text="@string/language_creole"
-            app:layout_constraintStart_toStartOf="parent"
+            android:textAlignment="textStart"
+            app:icon="@drawable/ic_haiti"
+            app:iconPadding="@dimen/dimen_12dp"
+            app:iconTint="@null"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btn_spanish"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/btn_spanish" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
