--- a/app/src/main/res/layout/fr_onboarding.xml
+++ b/app/src/main/res/layout/fr_onboarding.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data class=".OnboardingBinding">
 
@@ -11,7 +12,33 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:background="@color/colorPrimaryDark">
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginBottom="@dimen/dimen_12dp"
+            app:layout_constraintBottom_toTopOf="@+id/dots_indicator"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
+            android:id="@+id/dots_indicator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/dimen_28dp"
+            app:dotsColor="@color/colorGray76"
+            app:dotsSize="@dimen/dimen_10dp"
+            app:dotsSpacing="@dimen/dimen_4dp"
+            app:dotsWidthFactor="1"
+            app:layout_constraintBottom_toTopOf="@+id/already_have_account_tv"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:progressMode="false"
+            app:selectedDotColor="@color/colorWhite" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/back_btn"
@@ -19,34 +46,77 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginStart="@dimen/dimen_8dp"
+            android:layout_marginTop="@dimen/dimen_16dp"
             android:onClick="@{() -> viewModel.back()}"
             app:icon="@drawable/ic_arrow_back"
+            app:iconTint="@null"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/view_pager"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/back_btn" />
-
-        <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
-            android:id="@+id/dots_indicator"
+        <ImageView
+            android:id="@+id/iv_top"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:dotsColor="@color/colorPrimaryDark"
-            app:dotsCornerRadius="8dp"
-            app:dotsSize="16dp"
-            app:dotsSpacing="4dp"
-            app:dotsWidthFactor="2.5"
+            android:layout_marginTop="@dimen/dimen_8dp"
+            android:contentDescription="@null"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/view_pager"
-            app:progressMode="true"
-            app:selectedDotColor="@color/colorPrimary" />
+            app:layout_constraintTop_toTopOf="@+id/back_btn"
+            app:srcCompat="@drawable/ic_logo_toolbar" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/already_have_account_tv"
+            style="@style/TextView_400"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/dimen_28dp"
+            android:text="@string/already_have_an_account"
+            android:textColor="@color/colorGrayB6"
+            app:layout_constraintBottom_toTopOf="@+id/create_account_btn"
+            app:layout_constraintEnd_toStartOf="@+id/sign_in_tv"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/sign_in_tv"
+            style="@style/TextView_700"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dimen_4dp"
+            android:layout_marginBottom="@dimen/dimen_28dp"
+            android:onClick="@{() -> viewModel.signIn()}"
+            android:text="@string/sign_in"
+            android:textColor="@color/colorGrayDC"
+            app:layout_constraintBottom_toTopOf="@+id/create_account_btn"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/already_have_account_tv" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/create_account_btn"
+            style="@style/Widget.Cashli.Button.Accent"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/dimen_28dp"
+            android:layout_marginBottom="@dimen/dimen_8dp"
+            android:onClick="@{() -> viewModel.createAccount()}"
+            android:text="@string/create_account"
+            app:layout_constraintBottom_toTopOf="@+id/get_support_btn"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/get_support_btn"
+            style="@style/Widget.Cashli.Button.NoBackground"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginBottom="@dimen/dimen_16dp"
+            android:onClick="@{() -> viewModel.getSupport()}"
+            android:text="@string/get_support"
+            android:textColor="@color/colorGrayDC"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
