--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,16 @@
     </style>
 
     <!-- Buttons -->
+    <style name="Widget.Cashli.Button" parent="Widget.MaterialComponents.Button">
+        <item name="fontFamily">@font/lato</item>
+        <item name="fontWeight">700</item>
+        <item name="android:textSize">@dimen/size_18sp</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="cornerRadius">@dimen/dimen_48dp</item>
+        <item name="android:textColor">@color/colorWhite</item>
+    </style>
+
     <style name="Widget.Cashli.Button.Radius28dp" parent="Widget.MaterialComponents.Button">
         <item name="fontFamily">@font/lato</item>
         <item name="fontWeight">600</item>
@@ -16,6 +26,44 @@
         <item name="android:textAlignment">center</item>
         <item name="android:textAllCaps">false</item>
         <item name="cornerRadius">@dimen/dimen_28dp</item>
+    </style>
+
+    <style name="Widget.Cashli.Button.Accent">
+        <item name="android:theme">@style/ButtonTheme.Accent</item>
+        <item name="android:height">@dimen/dimen_64dp</item>
+        <item name="rippleColor">@color/colorPinkBF</item>
+    </style>
+
+    <style name="Widget.Cashli.Button.NoBackground" parent="Widget.MaterialComponents.Button.TextButton">
+        <item name="android:height">@dimen/dimen_48dp</item>
+        <item name="android:textSize">@dimen/size_14sp</item>
+        <item name="fontFamily">@font/lato</item>
+        <item name="fontWeight">700</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="rippleColor">@null</item>
+    </style>
+
+    <style name="ButtonTheme" />
+
+    <style name="ButtonTheme.Accent">
+        <item name="colorPrimary">@color/btn_background_accent_selector</item>
+        <item name="backgroundTint">@color/btn_background_accent_selector</item>
+    </style>
+
+    <style name="TextView">
+        <item name="android:textColor">@color/colorWhite</item>
+        <item name="fontFamily">@font/lato</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">@dimen/size_14sp</item>
+    </style>
+
+    <style name="TextView_400" parent="TextView">
+        <item name="fontWeight">400</item>
+    </style>
+
+    <style name="TextView_700" parent="TextView">
+        <item name="fontWeight">700</item>
     </style>
 
 </resources>
