--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="colorGrayDC">#C2C2DC</color>
     <color name="colorGrayB6">#9F9FB6</color>
     <color name="colorGray76">#5F6076</color>
+    <color name="colorGray64">#373964</color>
     <color name="colorPinkBF">#CC4EBF</color>
 </resources>
