--- a/app/src/main/res/layout/fr_onboarding_step.xml
+++ b/app/src/main/res/layout/fr_onboarding_step.xml
@@ -36,24 +36,25 @@
                 tools:src="@drawable/ic_onboarding_1" />
 
             <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/onboarding_title_tv"
+                android:id="@+id/tv_onboarding_title"
                 style="@style/TextView_700"
+                visibility="@{viewModel.model.title != null}"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/dimen_48dp"
                 android:layout_marginTop="@dimen/dimen_negative_48dp"
                 android:textSize="@dimen/size_28sp"
-                app:layout_constraintBottom_toTopOf="@+id/onboarding_subtitle_tv"
+                app:layout_constraintBottom_toTopOf="@+id/tv_onboarding_subtitle"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/top_iv"
-                app:layout_constraintVertical_bias="0.100000024"
+                app:layout_constraintVertical_bias="0.1"
                 app:layout_constraintVertical_chainStyle="spread_inside"
                 app:textRes="@{viewModel.model.title}"
                 tools:text="@string/onboarding_title_3" />
 
             <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/onboarding_in_progress_tv"
+                android:id="@+id/tv_onboarding_in_progress"
                 style="@style/TextView_400"
                 visibility="@{viewModel.model.inProgress}"
                 android:layout_width="0dp"
@@ -62,27 +63,29 @@
                 android:text="@string/work_in_progress"
                 android:textColor="@color/colorGrayB6"
                 android:textSize="@dimen/size_12sp"
-                app:layout_constraintEnd_toEndOf="@+id/onboarding_title_tv"
-                app:layout_constraintTop_toBottomOf="@+id/onboarding_title_tv"
+                app:layout_constraintEnd_toEndOf="@+id/tv_onboarding_title"
+                app:layout_constraintTop_toBottomOf="@+id/tv_onboarding_title"
                 tools:text="@string/work_in_progress" />
 
             <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/onboarding_subtitle_tv"
+                android:id="@+id/tv_onboarding_subtitle"
                 style="@style/TextView_700"
+                visibility="@{viewModel.model.subtitle != null}"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/dimen_48dp"
                 android:textSize="@dimen/size_18sp"
-                app:layout_constraintBottom_toTopOf="@+id/onboarding_content_tv"
+                app:layout_constraintBottom_toTopOf="@+id/tv_onboarding_content"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/onboarding_title_tv"
+                app:layout_constraintTop_toBottomOf="@+id/tv_onboarding_title"
                 app:textRes="@{viewModel.model.subtitle}"
                 tools:text="@string/onboarding_subtitle_1" />
 
             <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/onboarding_content_tv"
+                android:id="@+id/tv_onboarding_content"
                 style="@style/TextView_400"
+                visibility="@{viewModel.model.content != null}"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/dimen_48dp"
@@ -90,16 +93,17 @@
                 android:lineSpacingExtra="@dimen/dimen_4dp"
                 android:textColor="@color/colorGrayB6"
                 android:textSize="@dimen/size_12sp"
-                app:layout_constraintBottom_toTopOf="@+id/onboarding_news_tv"
+                app:layout_constraintBottom_toTopOf="@+id/tv_onboarding_news"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/onboarding_subtitle_tv"
+                app:layout_constraintTop_toBottomOf="@+id/tv_onboarding_subtitle"
                 app:textRes="@{viewModel.model.content}"
                 tools:text="@string/onboarding_content_1" />
 
             <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/onboarding_news_tv"
+                android:id="@+id/tv_onboarding_news"
                 style="@style/TextView_400"
+                visibility="@{viewModel.model.news != null}"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/dimen_48dp"
@@ -110,7 +114,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/onboarding_content_tv"
+                app:layout_constraintTop_toBottomOf="@+id/tv_onboarding_content"
                 app:layout_constraintVertical_bias="0.0"
                 app:textRes="@{viewModel.model.news}"
                 tools:text="@string/onboarding_news_1" />
