--- a/app/src/main/res/navigation/auth_graph.xml
+++ b/app/src/main/res/navigation/auth_graph.xml
@@ -3,12 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation"
-    app:startDestination="@id/onboardingFragment">
+    app:startDestination="@id/chooseLanguageFragment">
 
     <fragment
         android:id="@+id/chooseLanguageFragment"
-        android:name="com.wolfpackdigital.cashli.presentation.main.language.ChooseLanguageFragment"
-        android:label="ChooseLanguageFragment" />
+        android:name="com.wolfpackdigital.cashli.presentation.language.ChooseLanguageFragment"
+        android:label="ChooseLanguageFragment"
+        tools:layout="@layout/fr_choose_language">
+        <action
+            android:id="@+id/action_chooseLanguageFragment_to_onboardingFragment"
+            app:destination="@id/onboardingFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/onboardingFragment"
