--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation"
-    app:startDestination="@id/chooseLanguageFragment">
+    app:startDestination="@id/informativeFragment">
+    <!-- TODO Change the start destination -->
 
 
     <fragment
@@ -15,4 +16,8 @@
         android:id="@+id/chooseLanguageFragment"
         android:name="com.wolfpackdigital.cashli.presentation.main.language.ChooseLanguageFragment"
         android:label="ChooseLanguageFragment" />
+    <fragment
+        android:id="@+id/informativeFragment"
+        android:name="com.wolfpackdigital.cashli.presentation.auth.signup.InformativeFragment"
+        android:label="InformativeFragment" />
 </navigation>
