--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,8 +16,15 @@
         <item name="android:textAlignment">center</item>
         <item name="android:textAllCaps">false</item>
         <item name="cornerRadius">@dimen/dimen_28dp</item>
+    </style>
 
-
+    <style name="Widget.Cashli.Button.Radius48dp" parent="Widget.MaterialComponents.Button">
+        <item name="fontFamily">@font/lato</item>
+        <item name="fontWeight">700</item>
+        <item name="android:textSize">@dimen/size_16sp</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="cornerRadius">@dimen/dimen_48dp</item>
     </style>
 
 </resources>
