--- a/app/src/main/res/layout/fr_informative.xml
+++ b/app/src/main/res/layout/fr_informative.xml
@@ -49,14 +49,12 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.button.MaterialButton
-            style="@style/Widget.Cashli.Button.Radius48dp"
+            style="@style/Widget.Cashli.Button.Accent"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dimen_24dp"
             android:layout_marginEnd="@dimen/dimen_24dp"
             android:layout_marginBottom="@dimen/dimen_20dp"
-            android:backgroundTint="@color/pinkD3"
-            android:paddingVertical="@dimen/dimen_16dp"
             android:text="@string/sign_up"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
