--- a/app/src/main/res/layout/fr_onboarding_step.xml
+++ b/app/src/main/res/layout/fr_onboarding_step.xml
@@ -26,14 +26,15 @@
 
             <ImageView
                 android:id="@+id/top_iv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
                 android:contentDescription="@null"
                 app:drawableRes="@{viewModel.model.image}"
+                app:layout_constraintDimensionRatio="w,1:1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:src="@drawable/ic_onboarding_1" />
+                tools:src="@drawable/ic_onboarding_3" />
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tv_onboarding_title"
