Remove unused variables

--- a/app/src/main/res/layout/fr_onboarding_step.xml
+++ b/app/src/main/res/layout/fr_onboarding_step.xml
@@ -38,7 +38,7 @@
                 tools:src="@drawable/ic_onboarding_3" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/a"
+                android:id="@+id/cl_header"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dimen_negative_48dp"
@@ -107,7 +107,7 @@
                 app:layout_constraintBottom_toTopOf="@+id/tv_onboarding_news"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/a"
+                app:layout_constraintTop_toBottomOf="@+id/cl_header"
                 app:textRes="@{viewModel.model.content}"
                 tools:text="@string/onboarding_content_1" />
 
