--- a/app/src/main/res/layout/fr_choose_language.xml
+++ b/app/src/main/res/layout/fr_choose_language.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.wolfpackdigital.cashli.presentation.main.language.ChooseLanguageViewModel" />
+            type="com.wolfpackdigital.cashli.presentation.language.ChooseLanguageViewModel" />
 
         <variable
             name="languages"
@@ -26,10 +26,10 @@
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:contentDescription="@null"
+            android:src="@drawable/ic_top_shapes_background"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_choose_language_top" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/top_guideline"
@@ -44,11 +44,11 @@
             android:adjustViewBounds="true"
             android:contentDescription="@null"
             android:scaleType="fitXY"
+            android:src="@drawable/ic_background_blue_dots"
             app:layout_constraintBottom_toTopOf="@id/background_guideline"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/top_guideline"
-            tools:srcCompat="@drawable/ic_background_blue_dots" />
+            app:layout_constraintTop_toBottomOf="@id/top_guideline" />
 
         <ImageView
             android:id="@+id/iv_logo"
@@ -77,7 +77,7 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_english"
-            style="@style/Widget.Cashli.Button.Radius28dp"
+            style="@style/Widget.Cashli.Button.Primary.Language"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/dimen_56dp"
@@ -97,7 +97,7 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_spanish"
-            style="@style/Widget.Cashli.Button.Radius28dp"
+            style="@style/Widget.Cashli.Button.Primary.Language"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/dimen_56dp"
@@ -117,7 +117,7 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_creole"
-            style="@style/Widget.Cashli.Button.Radius28dp"
+            style="@style/Widget.Cashli.Button.Primary.Language"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/dimen_56dp"
