--- a/app/src/main/res/layout/fr_informative.xml
+++ b/app/src/main/res/layout/fr_informative.xml
@@ -16,36 +16,113 @@
         android:layout_height="match_parent"
         android:background="@color/colorPrimaryDark">
 
-        <ImageButton
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_back"
+            style="@style/Widget.Material3.Button.TextButton.Icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginStart="@dimen/dimen_20dp"
+            android:layout_marginTop="@dimen/dimen_16dp"
             android:background="@null"
             android:contentDescription="@string/back"
-            android:src="@drawable/ic_arrow_back"
-            app:layout_constraintBottom_toBottomOf="@id/iv_logo"
+            android:onClick="@{() -> viewModel.back()}"
+            app:icon="@drawable/ic_arrow_back"
+            app:iconTint="@color/colorGrayDC"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/iv_logo" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/iv_logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dimen_20dp"
+            android:layout_marginTop="@dimen/dimen_8dp"
             android:contentDescription="@null"
             android:src="@drawable/ic_logo_small"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="@id/btn_back" />
+
+        <ImageView
+            android:id="@+id/iv_check_one"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dimen_28dp"
+            android:layout_marginEnd="@dimen/dimen_16dp"
+            android:contentDescription="@null"
+            android:paddingTop="@dimen/dimen_4dp"
+            app:layout_constraintEnd_toStartOf="@id/tv_first_sign_up_screen_message_one"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/tv_first_sign_up_screen_message_one"
+            app:srcCompat="@drawable/ic_check" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tv_first_sign_up_screen_message_one"
+            style="@style/TextView_400"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/dimen_32dp"
+            android:layout_marginBottom="@dimen/dimen_20dp"
+            android:lineSpacingExtra="@dimen/dimen_4dp"
+            android:text="@string/first_sign_up_screen_message_one"
+            android:textAlignment="viewStart"
+            android:textSize="@dimen/size_16sp"
+            app:layout_constraintBottom_toTopOf="@id/tv_first_sign_up_screen_message_two"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/iv_check_one" />
+
+        <ImageView
+            android:id="@+id/iv_check_two"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dimen_28dp"
+            android:layout_marginEnd="@dimen/dimen_16dp"
+            android:contentDescription="@null"
+            android:paddingTop="@dimen/dimen_4dp"
+            app:layout_constraintEnd_toStartOf="@id/tv_first_sign_up_screen_message_two"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/tv_first_sign_up_screen_message_two"
+            app:srcCompat="@drawable/ic_check" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tv_first_sign_up_screen_message_two"
+            style="@style/TextView_400"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/dimen_32dp"
+            android:layout_marginBottom="@dimen/dimen_28dp"
+            android:lineSpacingExtra="@dimen/dimen_4dp"
+            android:maxLines="2"
+            android:text="@string/first_sign_up_screen_message_two"
+            android:textAlignment="viewStart"
+            android:textSize="@dimen/size_16sp"
+            app:layout_constraintBottom_toTopOf="@id/divider"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/iv_check_two" />
+
+        <com.google.android.material.textview.MaterialTextView
+            style="@style/TextView_400"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dimen_28dp"
+            android:lineSpacingExtra="@dimen/dimen_4dp"
+            android:text="@string/first_sign_up_screen_message_three"
+            android:textAlignment="viewStart"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@id/tv_first_sign_up_screen_message_two"
+            app:layout_constraintTop_toBottomOf="@id/divider" />
 
         <View
+            android:id="@+id/divider"
             android:layout_width="0dp"
             android:layout_height="1dp"
             android:background="@color/colorPrimary"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/tv_first_sign_up_screen_message_two"
+            app:layout_constraintStart_toStartOf="@id/tv_first_sign_up_screen_message_two"
             app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.button.MaterialButton
@@ -55,10 +132,38 @@
             android:layout_marginStart="@dimen/dimen_24dp"
             android:layout_marginEnd="@dimen/dimen_24dp"
             android:layout_marginBottom="@dimen/dimen_20dp"
+            android:onClick="@{() -> viewModel.signUp()}"
             android:text="@string/sign_up"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/tv_already_account"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tv_already_account"
+            style="@style/TextView_400"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/dimen_16dp"
+            android:text="@string/already_have_an_account"
+            android:textColor="@color/colorGrayB6"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/tv_sign_in"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tv_sign_in"
+            style="@style/TextView_700"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dimen_4dp"
+            android:onClick="@{() -> viewModel.signIn()}"
+            android:text="@string/sign_in"
+            android:textColor="@color/colorGrayDC"
+            app:layout_constraintBottom_toBottomOf="@id/tv_already_account"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/tv_already_account"
+            app:layout_constraintTop_toTopOf="@id/tv_already_account" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
