Add generic toolbar

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -85,4 +85,8 @@
         <item name="fontWeight">700</item>
     </style>
 
+    <style name="TextView_600" parent="TextView">
+        <item name="fontWeight">600</item>
+    </style>
+
 </resources>
