--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,9 +5,13 @@
     <color name="colorAccent">#E060D3</color>
 
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorGrayF4">#DFDFF4</color>
     <color name="colorGrayDC">#C2C2DC</color>
     <color name="colorGrayB6">#9F9FB6</color>
     <color name="colorGray76">#5F6076</color>
+    <color name="colorGray71">#4D4D71</color>
     <color name="colorGray64">#373964</color>
+    <color name="colorPurpleB9">#8080B9</color>
     <color name="colorPinkBF">#CC4EBF</color>
+    <color name="colorRed62">#FD4D62</color>
 </resources>
