--- a/app/src/main/res/layout/fr_informative.xml
+++ b/app/src/main/res/layout/fr_informative.xml
@@ -47,7 +47,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/dimen_20dp"
-            app:isVisible="@{true}"
+            app:hidden="@{false}"
             app:layout_constraintBottom_toTopOf="@id/layout_message_two"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -61,7 +61,7 @@
             android:layout_marginStart="@dimen/dimen_28dp"
             android:layout_marginEnd="@dimen/dimen_32dp"
             android:layout_marginBottom="@dimen/dimen_28dp"
-            app:isVisible="@{true}"
+            app:hidden="@{false}"
             app:layout_constraintBottom_toTopOf="@id/divider"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -73,7 +73,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dimen_28dp"
-            app:isVisible="@{false}"
+            app:hidden="@{true}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/divider"
