--- a/app/src/main/res/layout/fr_phone_number.xml
+++ b/app/src/main/res/layout/fr_phone_number.xml
@@ -16,6 +16,7 @@
         <include
             android:id="@+id/toolbar"
             layout="@layout/toolbar_layout"
+            app:viewModel="@{viewModel.toolbar}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
