--- a/app/src/main/res/layout/check_image_with_text_layout.xml
+++ b/app/src/main/res/layout/check_image_with_text_layout.xml
@@ -34,7 +34,7 @@
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tv_first_sign_up_screen_message_one"
-            style="@style/TextView_400"
+            style="@style/TextView.Regular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:lineSpacingExtra="@dimen/dimen_4dp"
