--- a/app/src/main/res/layout/fr_phone_number.xml
+++ b/app/src/main/res/layout/fr_phone_number.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data class=".PhoneNumberBinding">
+
         <variable
             name="viewModel"
             type="com.wolfpackdigital.cashli.presentation.auth.signup.phoneNumber.PhoneNumberViewModel" />
@@ -16,25 +17,25 @@
         <include
             android:id="@+id/toolbar"
             layout="@layout/toolbar_layout"
-            app:viewModel="@{viewModel.toolbar}"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:viewModel="@{viewModel.toolbar}" />
 
         <com.google.android.material.textview.MaterialTextView
+            style="@style/TextView.Bold"
             android:layout_width="0dp"
-            style="@style/TextView_700"
             android:layout_height="wrap_content"
-            android:lineSpacingExtra="@dimen/dimen_8dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginStart="@dimen/dimen_20dp"
-            android:text="@string/phone_number_question"
-            android:textSize="@dimen/size_34sp"
-            android:textAlignment="viewStart"
+            android:layout_marginTop="@dimen/dimen_44dp"
             android:layout_marginEnd="@dimen/dimen_32dp"
-            app:layout_constraintTop_toBottomOf="@id/toolbar"
-            android:layout_marginTop="@dimen/dimen_44dp"/>
+            android:lineSpacingExtra="@dimen/dimen_4dp"
+            android:text="@string/phone_number_question"
+            android:textAlignment="viewStart"
+            android:textSize="@dimen/size_34sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
         <com.google.android.material.button.MaterialButton
             style="@style/Widget.Cashli.Button.Accent"
