--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,8 +10,7 @@
 
     <!-- Buttons -->
     <style name="Widget.Cashli.Button" parent="Widget.MaterialComponents.Button">
-        <item name="fontFamily">@font/lato</item>
-        <item name="fontWeight">700</item>
+        <item name="fontFamily">@font/lato_bold</item>
         <item name="android:textSize">@dimen/size_18sp</item>
         <item name="android:textAlignment">center</item>
         <item name="android:textAllCaps">false</item>
@@ -20,7 +19,7 @@
     </style>
 
     <style name="Widget.Cashli.Button.Primary.Language">
-        <item name="fontWeight">600</item>
+        <item name="fontFamily">@font/lato_semi_bold</item>
         <item name="android:textSize">@dimen/size_16sp</item>
         <item name="cornerRadius">@dimen/dimen_28dp</item>
     </style>
@@ -46,8 +45,7 @@
     <style name="Widget.Cashli.Button.NoBackground" parent="Widget.MaterialComponents.Button.TextButton">
         <item name="android:height">@dimen/dimen_48dp</item>
         <item name="android:textSize">@dimen/size_14sp</item>
-        <item name="fontFamily">@font/lato</item>
-        <item name="fontWeight">700</item>
+        <item name="fontFamily">@font/lato_bold</item>
         <item name="android:textAlignment">center</item>
         <item name="android:textAllCaps">false</item>
         <item name="rippleColor">@null</item>
@@ -72,21 +70,20 @@
 
     <style name="TextView">
         <item name="android:textColor">@color/colorWhite</item>
-        <item name="fontFamily">@font/lato</item>
         <item name="android:textAlignment">center</item>
         <item name="android:textSize">@dimen/size_14sp</item>
     </style>
 
-    <style name="TextView_400" parent="TextView">
-        <item name="fontWeight">400</item>
+    <style name="TextView.Regular" parent="TextView">
+        <item name="fontFamily">@font/lato</item>
     </style>
 
-    <style name="TextView_700" parent="TextView">
-        <item name="fontWeight">700</item>
+    <style name="TextView.Bold" parent="TextView">
+        <item name="fontFamily">@font/lato_bold</item>
     </style>
 
-    <style name="TextView_600" parent="TextView">
-        <item name="fontWeight">600</item>
+    <style name="TextView.SemiBold" parent="TextView">
+        <item name="fontFamily">@font/lato_semi_bold</item>
     </style>
 
     <style name="ScrollView">
