--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -42,6 +42,14 @@
         <item name="rippleColor">@color/colorGray64</item>
     </style>
 
+    <style name="Widget.Cashli.Button.Primary.CountryCode">
+        <item name="android:theme">@style/ButtonTheme.Primary</item>
+        <item name="cornerRadius">@dimen/dimen_10dp</item>
+        <item name="android:textSize">@dimen/size_16sp</item>
+        <item name="android:textColor">@color/colorGrayB6</item>
+        <item name="rippleColor">@color/colorGray64</item>
+    </style>
+
     <style name="Widget.Cashli.Button.NoBackground" parent="Widget.MaterialComponents.Button.TextButton">
         <item name="android:height">@dimen/dimen_48dp</item>
         <item name="android:textSize">@dimen/size_14sp</item>
