--- a/app/src/main/res/layout/fr_informative.xml
+++ b/app/src/main/res/layout/fr_informative.xml
@@ -94,8 +94,7 @@
             style="@style/Widget.Cashli.Button.Accent"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dimen_24dp"
-            android:layout_marginEnd="@dimen/dimen_24dp"
+            android:layout_marginHorizontal="@dimen/dimen_28dp"
             android:layout_marginBottom="@dimen/dimen_20dp"
             android:onClick="@{() -> viewModel.signUp()}"
             android:text="@string/sign_up"
@@ -108,7 +107,7 @@
             style="@style/TextView_400"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/dimen_16dp"
+            android:layout_marginBottom="@dimen/dimen_32dp"
             android:text="@string/already_have_an_account"
             android:textColor="@color/colorGrayB6"
             app:layout_constraintBottom_toBottomOf="parent"
