--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -27,4 +27,5 @@
     <dimen name="size_16sp">16sp</dimen>
     <dimen name="size_18sp">18sp</dimen>
     <dimen name="size_28sp">28sp</dimen>
+    <dimen name="size_34sp">34sp</dimen>
 </resources>
