--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
@@ -9,7 +9,7 @@
     </style>
 
     <!-- Buttons -->
-    <style name="Widget.Cashli.Button" parent="Widget.MaterialComponents.Button">
+    <style name="Widget.Cashli.Button" parent="Widget.MaterialComponents.Button.UnelevatedButton">
         <item name="fontFamily">@font/lato</item>
         <item name="fontWeight">700</item>
         <item name="android:textSize">@dimen/size_18sp</item>
@@ -31,7 +31,7 @@
         <item name="rippleColor">@color/colorPinkBF</item>
     </style>
 
-    <style name="Widget.Cashli.Button.PrimaryDark">
+    <style name="Widget.Cashli.Button.PrimaryDark" tools:ignore="UnusedResources">
         <item name="android:theme">@style/ButtonTheme.PrimaryDark</item>
         <item name="android:height">@dimen/dimen_64dp</item>
         <item name="rippleColor">@color/colorGray64</item>
@@ -56,18 +56,18 @@
     <style name="ButtonTheme" />
 
     <style name="ButtonTheme.Accent">
-        <item name="colorPrimary">@color/btn_background_accent_selector</item>
-        <item name="backgroundTint">@color/btn_background_accent_selector</item>
+        <item name="android:colorPrimary">@color/btn_background_accent_selector</item>
+        <item name="android:backgroundTint">@color/btn_background_accent_selector</item>
     </style>
 
     <style name="ButtonTheme.Primary">
-        <item name="colorPrimary">@color/btn_background_primary_selector</item>
-        <item name="backgroundTint">@color/btn_background_primary_selector</item>
+        <item name="android:colorPrimary">@color/btn_background_primary_selector</item>
+        <item name="android:backgroundTint">@color/btn_background_primary_selector</item>
     </style>
 
-    <style name="ButtonTheme.PrimaryDark">
-        <item name="colorPrimary">@color/btn_background_primary_dark_selector</item>
-        <item name="backgroundTint">@color/btn_background_primary_dark_selector</item>
+    <style name="ButtonTheme.PrimaryDark" tools:ignore="UnusedResources">
+        <item name="android:colorPrimary">@color/btn_background_primary_dark_selector</item>
+        <item name="android:backgroundTint">@color/btn_background_primary_dark_selector</item>
     </style>
 
     <style name="TextView">
@@ -97,10 +97,11 @@
         <item name="android:background">@drawable/text_input_edit_text_background_selector</item>
         <item name="android:fontFamily">@font/lato</item>
         <item name="android:fontWeight">400</item>
+        <item name="android:paddingVertical">@dimen/dimen_16dp</item>
         <item name="android:textSize">@dimen/size_16sp</item>
-        <item name="android:paddingTop">@dimen/dimen_12dp</item>
-        <item name="android:paddingBottom">@dimen/dimen_12dp</item>
         <item name="android:paddingStart">@dimen/dimen_20dp</item>
+        <item name="android:textCursorDrawable">@null</item>
+        <item name="android:textColor">@color/colorWhite</item>
         <item name="android:textColorHint">@color/colorGrayB6</item>
         <item name="hintTextColor">@color/colorGrayB6</item>
     </style>
